[gd_scene load_steps=12 format=3 uid="uid://bhnu738xunaln"]

[ext_resource type="Script" uid="uid://dpj2n00qlld32" path="res://godot/scripts/age_limit.gd" id="1_ik616"]
[ext_resource type="Texture2D" uid="uid://dq8xe0fpqsci1" path="res://assets/BG_ICONS/background.jpg" id="2_t5hig"]
[ext_resource type="FontFile" uid="uid://es04xj3f3psf" path="res://assets/fonts/Pixel Game.otf" id="3_u8g6u"]
[ext_resource type="AudioStream" uid="uid://jac4oupgr4kq" path="res://assets/sound fx/mixkit-select-click-1109.wav" id="4_47pol"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ps2c8"]
texture = ExtResource("2_t5hig")
modulate_color = Color(1, 1, 1, 0.486275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdchn"]
bg_color = Color(0.0295066, 0.0295066, 0.0295065, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vfq8"]
bg_color = Color(0.804743, 0.804743, 0.804743, 1)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 5
border_width_bottom = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t6med"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixag1"]
bg_color = Color(0.0295066, 0.0295066, 0.0295065, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ld6tg"]
bg_color = Color(0.804743, 0.804743, 0.804743, 1)
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 5
border_width_bottom = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ps2c8"]

[node name="AgeLimit" type="CanvasLayer"]
script = ExtResource("1_ik616")

[node name="Bg" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ps2c8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -115.0
offset_right = 300.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Age Rules" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u8g6u")
theme_override_font_sizes/font_size = 47
text = "Are you a 13 or Above to Play this ,
 if not you click no button"
horizontal_alignment = 1
autowrap_mode = 2
justification_flags = 171
uppercase = true

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Yes_Button" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u8g6u")
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxFlat_hdchn")
theme_override_styles/hover = SubResource("StyleBoxFlat_8vfq8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_t6med")
text = "YES"

[node name="No_Button" type="Button" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_u8g6u")
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxFlat_ixag1")
theme_override_styles/hover = SubResource("StyleBoxFlat_ld6tg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ps2c8")
text = "NO"

[node name="hover_fx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_47pol")
volume_db = -15.0
bus = &"SFX"

[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/Yes_Button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Yes_Button" to="." method="_on_yes_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/No_Button" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/No_Button" to="." method="_on_no_button_pressed"]
